package seedu.fitnessone;

import seedu.fitnessone.command.Command;
import seedu.fitnessone.controller.Coach;
import java.io.IOException;
import seedu.fitnessone.exception.InvalidAthleteException;
import seedu.fitnessone.exception.InvalidCommandException;
import seedu.fitnessone.exception.InvalidExerciseException;
import seedu.fitnessone.exception.InvalidIDException;
import seedu.fitnessone.exception.InvalidSessionException;
import seedu.fitnessone.ui.Parser;
import seedu.fitnessone.ui.Ui;
import seedu.fitnessone.storage.StorageManager;

public class FitnessONE {
    private final Ui view;
    private Coach coachController;
    private final StorageManager storage;

    public FitnessONE() {
        view = new Ui();
        storage = new StorageManager("data/athletes_export.txt");
        // try loading saved data; fall back to empty coach if load fails
        try {
            coachController = storage.load();
            view.showWelcome();
            view.printWithDivider("Loaded saved athletes data.");
        } catch (IOException e) {
            coachController = new Coach();
            view.showWelcome();
            view.printWithDivider("No saved data found, starting with empty data.");
        }
    }

    private void run() {
        boolean isExit = false;
        while (!isExit) {
            try {
                String userInput = view.readCommand();
                Command c = Parser.parse(userInput);
                c.execute(coachController, view);
                isExit = c.isExit();
                // persist state after every successful command
                try {
                    storage.save(coachController);
                } catch (IOException ioEx) {
                    view.printWithDivider("Failed to save data: " + ioEx.getMessage());
                }
            } catch (InvalidCommandException e) {
                view.printWithDivider("InvalidCommandException: " + e.getMessage());

            } catch (InvalidIDException e) {
                view.printWithDivider("InvalidIDException: " + e.getMessage());

            } catch (InvalidSessionException | InvalidExerciseException | InvalidAthleteException e) {
                throw new RuntimeException(e);
            }
        }
    }

    /**
     * Main entry-point for the java.duke.Duke application.
     */
    public static void main(String[] args) {
        new FitnessONE().run();
    }

}
